              first trying to generate gpg key, please add a name for your
              email account in Roundcube: `Settings -> Identities`.

        - SOGo:
            - List all contacts by default in SOGo global address book.

        - FreeBSD:
            - Switch from OpenSSL to LibreSSL by default.

    * Fixed issues:
        - Fix the HTTPROXY vulnerability in Apache and Nginx.
          Reference: https://httpoxy.org/
        - Not convert domain name and email address to lower cases while
          creating mail accounts with scripts tools/create_mail_user_*.
          Thanks Santosh Gupta <head.it _at_ satmatechnologies.com> for the
          report.

        - SOGo:
            - Not correctly redirect access to https in Apache.

        - Postfix:
            - Not enable opportunistic TLS support for remote smtp clients.
            - Incorrect HELO restriction rule which causes Postfix rejects smtp
              session with HELO "[IP_ADDRESS]" (with squared brackets).

        - Nginx:
            - Not forward real client IP address to SOGo.
            - Config file for catch-all virtual host `default.conf` has been
              renamed to `00-default.conf`, to make sure it will be loaded
              before other virtual host config files.

        - Roundcube webmail:
            - Not set proper file owner (apache/nginx) and permission (0600)
              for config file of password plugin.

        - iRedAPD:
            - Not add FreeBSD Jail IP address as trusted client. This causes
              mail delivery failure while sending to user under same domain.
              Thanks Erez Zabusky <erez_z _at_ cre8ip.com> for the report.

        - OpenBSD:
            - not enable uwsgi service.
            - not create symbol links for PHP programs.

    * Updated packages:
        + Roundcube -> 1.2.2
        + iRedAdmin -> 0.6.3
        + uwsgi -> 2.0.14 (OpenBSD only)
        + FreeBSD:
            - php-7.0
            - mysql-5.7
