@@ -31,6 +31,7 @@ namespace "PH_LDAP_SUFFIX" {
     index   domainBackupMX
     index   domainSenderBccAddress
     index   domainRecipientBccAddress
+    index   domainStatus
 
     index   accessPolicy
     index   memberOfGroup
