@@ -80,7 +80,7 @@ access to attrs="domainAdmin,domainGlobalAdmin,domainSenderBccAddress,domainReci
     by users        none
 
 # User attrs.
-access to attrs="employeeNumber,mail,accountStatus,userSenderBccAddress,userRecipientBccAddress,mailQuota,backupMailAddress,shadowAddress,memberOfGroup"
+access to attrs="employeeNumber,mail,accountStatus,domainStatus,userSenderBccAddress,userRecipientBccAddress,mailQuota,backupMailAddress,shadowAddress,memberOfGroup"
     by anonymous    auth
     by self         read
     by dn.exact="PH_LDAP_BINDDN"   read
